chgt dans about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
         <h1 style="font-family: var(--font-heading); font-size: 2rem; color: var(--color-primary); margin-bottom: 1rem;">À propos</h1>
         
         <div class="post-content about-compact">
-            <p>Bonjour et bienvenue sur mon blog dédié au latte-art !</p>
+            <p>Bonjour et bienvenue sur mon blog dédié au latte-art pour les amateur de café désirant pratiquer sur leur machine à la maison !</p>
             
             <h2>Qui suis-je ?</h2>
             <p>Je suis barista depuis de nombreuses années en France et dans divers pays d'Amérique du Sud. J'ai développé une véritable passion pour l'art du café. 
